[package]
name = "seg-configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
crossterm = "0.23"
tui = { version = "0.17", features = ["termion"] }
yaml-rust = "0.4"
clap = { version = "3.1.18", features = ["derive"] }
serde = "1.0"
serde_yaml = "0.8"

[[bin]]
name = "seg-configurator"
path = "main.rs"
